--- a/CSS/Calculator_CSS.css
+++ b/CSS/Calculator_CSS.css
@@ -77,7 +77,7 @@ button:hover {
 
 }
 
-.calculator-keys {
+.calculator_keys {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
